force-app/main/default/objects/cgcloud__CP_Calculation_Schema_Determination__c/cgcloud__CP_Calculation_Schema_Determination__c.object-meta.xml
<CustomObject>
    <description>The calculation schema determination object is used for the determination of rule based on order template pricing type and customer pricing type.</description>
    <label>Calculation Schema Determination</label>
    <nameField>
        <displayFormat>CSD - {000000}</displayFormat>
        <label>Calculation Schema Determination Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calculation Schema Determinations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>