force-app/main/default/objects/cgcloud__CP_Calculation_Schema_Determination__c/fields/cgcloud__Account_Price_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account_Price_Type__c</fullName>
    <description>Defines the pricing type of the customer.</description>
    <label>Customer Price Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>