force-app/main/default/objects/cgcloud__CP_Calculation_Schema_Determination__c/fields/cgcloud__Calculation_Schema__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Calculation_Schema__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference to the calculation schema.</description>
    <label>Calculation Schema</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Calculation Schema and the Calculation Schema Determination must have the same Sales Org.</errorMessage>
        <filterItems>
            <field>cgcloud__CP_Calculation_Schema__c.cgcloud__Sales_Org__c</field>
            <operation>equals</operation>
            <valueField>$Source.cgcloud__Sales_Org__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__CP_Calculation_Schema__c</referenceTo>
    <relationshipLabel>Calculation Schema Determinations</relationshipLabel>
    <relationshipName>Calculation_Schema_Determinations</relationshipName>
    <type>Lookup</type>
</CustomField>