force-app/main/default/objects/cgcloud__CP_Calculation_Schema_Determination__c/fields/cgcloud__Order_Price_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Order_Price_Type__c</fullName>
    <description>Defines the pricing type of the sales document template.</description>
    <label>Order Price Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <default>true</default>
                <label>A</label>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>Q</fullName>
            </value>
            <value>
                <fullName>T</fullName>
            </value>
            <value>
                <fullName>V</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>