force-app/main/default/objects/cgcloud__CP_Calculation_Schema_Determination__c/validationRules/cgcloud__Avoid_Sales_Org_Modification.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Avoid_Sales_Org_Modification</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( cgcloud__Sales_Org__c )</errorConditionFormula>
    <errorMessage>The Sales Org can&apos;t be edited after Calculation Schema Determination  creation.</errorMessage>
</ValidationRule>