force-app/main/default/objects/cgcloud__CP_Calculation_Schema_Determination__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Calculation_Schema__c</columns>
    <columns>cgcloud__Account_Price_Type__c</columns>
    <columns>cgcloud__Order_Price_Type__c</columns>
    <columns>cgcloud__Sales_Org__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>